add a  gotop button

--- a/message/css/style.css
+++ b/message/css/style.css
@@ -122,3 +122,16 @@ p {
     line-height: 1.5;
     overflow-x: hidden;
 }
+
+#scrolltop {
+    width: 88px;
+    height: 88px;
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    margin-left: 0;
+    margin-bottom: 0;
+    z-index: 100;
+    text-align: center;
+    cursor: pointer;
+}
