--- a/SScms/views/index/index.html
+++ b/SScms/views/index/index.html
@@ -1,4 +1,66 @@
+<!doctype html>
+<html>
+    <head>
+        <style>
+            /*
+            *{border:1px solid red;height:20px}
+            所有的HTML5结构标签本质上来说就是一个div标签，只不过有意义
+            */
+            /*页面头部 header*/
+            header{height:150px;background:#ABCDEF}
+            nav{height:30px;background:#ff9900;margin-top:100px;}
+            nav ul li{width:100px;height:30px;float:left;line-height:30px}
+            /*页面中间 div */
+            div{margin-top:10px;height:1000px;}
+            section{height:1000px;background:#ABCDEF;width:70%;float:left}
+            article{background:#F90;width:500px;margin:0 auto;text-align:center}
 
+            aside{height:1000px;background:#ABCDEF;width:28%;float:right}
+            /*页面底部 footer*/
+            footer{height:100px;background:#ABCDEF;clear:both;margin-top:10px}
+
+            .searchModal {
+                display: none;
+                background: #FDF3C1;
+                color: #000000;
+                padding: 20px;
+                border: 20px solid #8F6031;
+                float: left;
+                font-size: 1.2em;
+                position: fixed;
+                height: 150px;
+                width: 550px;
+                top: 50%;
+                left: 50%;
+                z-index: 200;
+            }
+        </style>
+    </head>
+    <body>
+        <header>
+            <p>这是一个header标签</p>
+            <nav>
+                <ul>
+                    <li>首页</li>
+                    <li>起夜</li>
+                    <li>论坛</li>
+                    <li>商城</li>
+                    <li>社区</li>
+                </ul>
+                <a href="search.php" rel="searchWindow" class="modal" id="search"><span>搜索</span></a>
+                <a href="register.php" rel="registerWindow" class="modal" id="register"><span>注册</span></a>
+                <a href="login.php" rel="loginWindow" class="modal" id="login"><span>登录</span></a>
+            </nav>
+            <div id="searchWindow" class="searchModal">
+                <h2>搜索</h2>
+                <form name="search" action="search.php" method="post">
+                    <label for="pesearch">关键字</label>
+                    <input type="search" name="pesearch" id="pesearch" size="32">
+                    <input type="submit" value="搜索">
+                </form>
+            </div>
+        </header>
+        <div>
             <section>
                 <p>这是一个section标签</p>
                 <article>
@@ -27,7 +89,7 @@
                 <figure>
                     <figcaption>UFO</figcaption>
                     <p>不明飞行物 Unknown Flying Object</p>
-                    <?php echo '<b>这是由php代码产生的句子<b>' ?>
+                    <?php echo '<b>这是由php代码产生的句子</b>' ?>
                 </figure>
                 <figure>
                      <dt>DDS</dt>
@@ -85,4 +147,16 @@
                 </hgroup>
             </aside>
         </div>
-        
+        <footer>
+            <p>这是一个footer标签</p>
+            <hr />
+            <small>法律条文</small>
+            <small>联系我们</small>
+            <small>客户意见</small>
+            <small>商户合作</small>
+        </footer>
+        <script src="public/js/jquery-1.12.2.min.js"></script>
+        <script src="public/js/showWindow.js"></script>
+    </body>
+
+</html>
